# EGsim

./: .gitignore  BacklogDump.txt  CMakeLists.txt  ComponentsWithFeatures.md  Demo presentation.odp  EngineSimulator.cpp  README.md  Sim_model.drawio  brainstorm.md  runALL.sh  testsRun.sh
Documentation/: ComponentDiag.PLANTUML  SequenceDiagram.PLANTUML  Sim_model.drawio
EngineSimulator/: CMakeLists.txt
EngineSimulator/include/: can_encoder.h  can_encoder.hpp  can_reader.h  control_module.h  control_module.hpp  engine.h  engine.hpp  fuel_calculator.hpp  gearbox.h  gearbox.hpp  signal_decoder.h  signals.hpp  transmition.h
EngineSimulator/src/: can_encoder.cpp  can_reader.cpp  control_module.cpp  engine.cpp  gearbox.cpp  main.cpp  signal_decoder.cpp  signals.cpp  transmition.cpp
EngineSimulator/test/: CMakeLists.txt  engine_test.cpp  install gmock  main.cpp
EngineSimulator/test/include/: mock_fuel_calculator.hpp
EngineSimulator/testGearbox/: CMakeLists.txt  gearbox_test.cpp
GUI/ProjectSample/: CMakeLists.txt
GUI/ProjectSample/app/avic/: CMakeLists.txt
GUI/ProjectSample/app/avic/include/: cluster_updater.h  your_stuff.h
GUI/ProjectSample/app/avic/qml/: ValueSource.qml  cluster-gauges.qml
GUI/ProjectSample/app/avic/qml/images/: images.qrc
GUI/ProjectSample/app/avic/src/: your_stuff.cpp
InputHandler/: CMakeLists.txt
InputHandler/include/: can_encoder.hpp  can_reader_writer.hpp  can_writer.hpp  input_handler.hpp  placeholder.hpp
InputHandler/src/: can_encoder.cpp  can_reader_writer.cpp  can_writer.cpp  input_handler.cpp  main.cpp  socketcan_cpp.cpp
Scripts/: runALL.sh  vcanStart.sh
UserCases/: ComponentDiag.PLANTUML  SequenceDiagram.PLANTUML  SequenceDiagramEngineSimulator.PLANTUML
Utils/: new_can_encoder.cpp
Utils/canreaderwriter/: can_reader_writer.cpp  can_reader_writer.hpp  data_buffer.hpp
